boltffi_tests/fixtures/negative_scanner/unsafe_function_pointer.rs
#[export]
pub fn install(callback: unsafe fn(u32)) {
    let _ = callback;
}
